# Proyect-Gaming-Perfect

./: .gitignore  pyproject.toml
data/clean/: trends-clean.csv
src/EDA/: EDA_Anxiety.ipynb  EDA_Trends.ipynb  Prediction.ipynb  PredictionTrends.ipynb
src/EDA/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/EDA/catboost_info/learn/: events.out.tfevents
