[tool.poetry]
name = "gaming-prefect"
version = "0.1.0"
description = ""
authors = ["santiago"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.3"
matplotlib = "3.10.0"
seaborn = "0.13.2"
scikit-learn = "1.5.2"
ipykernel = "6.29.5"
xgboost = "2.1.3"
catboost = "1.2.7"
asttokens = "3.0.0"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.11"
decorator = "5.1.1"
executing = "2.1.0"
fonttools = "4.55.3"
graphviz = "0.20.3"
ipython = "8.31.0"
jedi = "0.19.2"
joblib = "1.4.2"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.8"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
numpy = "1.26.4"
nvidia-nccl-cu12 = "2.24.3"
packaging = "24.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "11.1.0"
platformdirs = "4.3.6"
plotly = "5.24.1"
prompt-toolkit = "3.0.48"
psutil = "6.1.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.19.1"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyzmq = "26.2.0"
scipy = "1.15.0"
six = "1.17.0"
stack-data = "0.6.3"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tornado = "6.4.2"
traitlets = "5.14.3"
tzdata = "2024.2"
wcwidth = "0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
